# Conspiracy

./: .gitignore  CMakeLists.txt  CPack.cmake  README.md
assets/tiledMaps/: Stage1.tmx  Stage1.txt  Stage2.tmx  Stage2.txt  Stage3.tmx  Stage3.txt  Stage4.txt  Stage5.txt  stage4.tmx
code/: main.cpp
code/engine/: CMakeLists.txt
code/engine/include/: collision_manager.hpp  engine.hpp  field_of_vision.hpp  game_object.hpp  input_manager.hpp  line.hpp  log.h  object.h  object.hpp  rectangle.hpp  scene.hpp  sprite.hpp  text.hpp  timer.hpp  window_manager.hpp
code/engine/src/: animation_manager.cpp  animation_quad.cpp  engine.cpp  game_object.cpp  input_manager.cpp  object.cpp  progress_bar.cpp  scene_manager.cpp  sprite.cpp  timer.cpp  window_manager.cpp
code/game/: CMakeLists.txt
code/game/include/: alien.hpp  alien_bilu.hpp  camera.hpp  camera_lever.hpp  computer_table.hpp  door_switch.hpp  enemy.hpp  finish_point.hpp  ground.hpp  guard.hpp  lose_scene.hpp  menu_scene.hpp  paper_table.hpp  stage_five.hpp  stage_three.hpp  table.hpp  wall.hpp
code/game/src/: alien_bilu.cpp  arrow.cpp  button.cpp  camera_lever.cpp  chair.cpp  computer_table.cpp  door_switch.cpp  finish_point.cpp  finish_scene.cpp  game_scene.cpp  guard.cpp  player.cpp  stage_five.cpp  stage_four.cpp  stage_three.cpp  tutorial_scene.cpp  wall.cpp
engine/: CMakeLists.txt
engine/include/: animation.hpp  animation_manager.hpp  animation_quad.hpp  audio.hpp  collision_manager.hpp  color.hpp  engine.hpp  field_of_vision.hpp  game.hpp  game_object.hpp  input_manager.hpp  line.hpp  log.h  progress_bar.hpp  rectangle.hpp  save_manager.hpp  scene.hpp  scene_manager.hpp  sdl2include.h  sdl2includes.hpp  sdl_manager.hpp  sprite.hpp  text.hpp  text_manager.hpp  timer.hpp  window_manager.hpp
engine/src/: animation.cpp  animation_manager.cpp  audio.cpp  collision_manager.cpp  engine.cpp  field_of_vision.cpp  game.cpp  game_object.cpp  input_manager.cpp  line.cpp  progress_bar.cpp  rectangle.cpp  save_manager.cpp  scene.cpp  scene_manager.cpp  sdl_manager.cpp  sprite.cpp  text.cpp  text_manager.cpp  window_manager.cpp
game/: CMakeLists.txt
game/include/: alien.hpp  alien_bilu.hpp  alien_etemer.hpp  alien_varginha.hpp  arrow.hpp  button.hpp  camera.hpp  camera_lever.hpp  camera_switch.hpp  camera_system.hpp  chair.hpp  choice.hpp  choose_stage_scene.hpp  computer_table.hpp  door.hpp  door_switch.hpp  door_system.hpp  enemy.hpp  finish_scene.hpp  game_scene.hpp  ground.hpp  guard.hpp  header.hpp  line.hpp  lose_scene.hpp  menu_scene.hpp  paper.hpp  player.hpp  progress_bar.hpp  stage_five.hpp  stage_four.hpp  stage_one.hpp  stage_three.hpp  stage_two.hpp  tutorial_scene.hpp  win_scene.hpp
game/src/: alien.cpp  alien_bilu.cpp  alien_etemer.cpp  alien_varginha.cpp  button.cpp  camera.cpp  camera_lever.cpp  camera_switch.cpp  camera_system.cpp  chair.cpp  choice.cpp  choose_stage_scene.cpp  computer_table.cpp  door.cpp  door_switch.cpp  door_system.cpp  enemy.cpp  finish_point.cpp  finish_scene.cpp  game_scene.cpp  ground.cpp  guard.cpp  header.cpp  lose_scene.cpp  menu_scene.cpp  paper.cpp  paper_table.cpp  player.cpp  progress_bar.cpp  stage_five.cpp  stage_four.cpp  stage_one.cpp  stage_three.cpp  stage_two.cpp  table.cpp  tutorial_scene.cpp  wall.cpp  win_scene.cpp
include/: alien.hpp  game_scene.hpp
src/: alien.cpp  main.cpp  player.cpp
